# Iris-CorridorKey

./: .gitignore  Cargo.toml  README.md  build.rs  org.seraph.Iris.json
.github/workflows/: release.yml
src/: bridge.rs  main.rs  main_ui.rs
src/components/: clip_card.rs  controls.rs  footer.rs  header.rs  mod.rs  model_selector.rs  queue_panel.rs  step_row.rs  viewer.rs
src/python/: iris_bridge.py
src/setup/: mod.rs  models.rs  paths.rs  python.rs  ui.rs  venv.rs
